# irregular_polygon_csp_resolver

./: .gitmodules
resolver_core/: CMakeLists.txt  build.bat  main.cpp  test_runner.cpp
resolver_core/assets/: problem_data.json
resolver_core/include/geometry/: edge.h  poly.h  shapes2d.h  triangle.cpp  triangle.h
resolver_core/include/geomtery/: poly.h  triangle.h
resolver_core/include/graphics/: print_config.h  svg_printer.h
resolver_core/include/io/: json_adapter.h  serializable.h
resolver_core/include/maths/: delaunay_triangulator.h  hashs.h  math_tools.h
resolver_core/include/solver/: problem.h  solution.h  solver.h
resolver_core/src/: delaunay_triangulator.cpp  math_tools.cpp  solver.cpp  svg_printer.cpp
resolver_core/tests/: delaunay_test.h  opencl_query_test.h  svg_printer_tests.cpp  svg_printer_tests.h  test_hash.h
